Modal, backdrop, buttom-order centered

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
     <main>
       <!--Герой-->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
-        <a href="#" class="button-order">Заказать услугу</a>
+            <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
+         <div class="button-order-center">
+           <a href="#" class="button-order">Заказать услугу</a>
+          </div>
       </section>
 
       <!--Преимущества-->
@@ -400,5 +402,13 @@
         </button>
       </div>
     </footer>
+
+<div class="backdrop is-hidden">
+<div class="modal">
+  <p class="left-data">Оставьте свои данные, мы вам перезвоним</p>
+  <button class="button-sent">Отправить</button>
+</div>
+</div>
+
   </body>
 </html>
