--- a/portfolio.html
+++ b/portfolio.html
@@ -63,19 +63,19 @@
         <nav class="filters">
           <ul class="filters">
             <li class="item">
-              <button type="button">Все</button>
+              <button class="button-filters" type="button">Все</button>
             </li>
             <li class="item">
-              <button type="button">Веб-сайты</button>
+              <button class="button-filters" type="button">Веб-сайты</button>
             </li>
             <li class="item">
-              <button type="button">Приложения</button>
+              <button class="button-filters" type="button">Приложения</button>
             </li>
             <li class="item">
-              <button type="button">Дизайн</button>
+              <button class="button-filters" type="button">Дизайн</button>
             </li>
             <li class="item">
-              <button type="button">Маркетинг</button>
+              <button class="button-filters" type="button">Маркетинг</button>
             </li>
           </ul>
         </nav>
