--- a/index.html
+++ b/index.html
@@ -420,7 +420,35 @@ id="user-mails"
 <div class="backdrop is-hidden" data-modal>
 <div class="modal">
   <p class="left-data">Оставьте свои данные, мы вам перезвоним</p>
+
+    <form class="form" autocomplete="off">
+      <div class="form-field">
+        <input type="text" class="form-input" name="name" id="name" placeholder=" " />
+        <label for="name" class="form-label">Имя</label>
+        <span class="icon"></span>
+      </div>
+    
+      <div class="form-field">
+        <input type="tel" class="form-input" name="telephone" id="telephone" placeholder=" " />
+        <label for="telephone" class="form-label">Телефон</label>
+        <span class="icon"></span>
+      </div>
+
+      <div class="form-field">
+        <input type="email" class="form-input" name="mail" id="mail" placeholder=" " />
+        <label for="mail" class="form-label">Почта</label>
+        <span class="icon"></span>
+      </div>
+
+      <div>
+      <textarea name="comment" id="comment"></textarea>
+        <label for="comment" class="form-label">Комментарий</label>
+      </div>
+
+      <p class="agree">Соглашаюсь с рассылкой и принимаю <a href=""><span class="conditions">Условия договора</span></a></p>
+
   <button class="button-sent" data-modal-close>Отправить</button>
+  </form>
 </div>
 </div>
 
