--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ id="user-mails"
       <div class="form-field">
         <input type="text" class="form-input" name="name" id="name" placeholder=" " />
         <label for="name" class="form-label">Имя</label>
-          <svg class="icon" width="12px" height="12px">
+          <svg class="icon-form" width="12px" height="12px">
             <use href="./images/sprite.svg#icon-name_form"></use> 
           </svg>
       </div>
@@ -439,7 +439,7 @@ id="user-mails"
       <div class="form-field">
         <input type="tel" class="form-input" name="telephone" id="telephone" placeholder=" " />
         <label for="telephone" class="form-label">Телефон</label>
-          <svg class="icon" width="13px" height="13px">
+          <svg class="icon-form" width="13px" height="13px">
             <use href="./images/sprite.svg#icon-phome_form"></use> 
           </svg>
       </div>
@@ -447,7 +447,7 @@ id="user-mails"
       <div class="form-field">
         <input type="email" class="form-input" name="mail" id="mail" placeholder=" " />
         <label for="mail" class="form-label">Почта</label>
-          <svg class="icon" width="15px" height="12px">
+          <svg class="icon-form" width="15px" height="12px">
             <use href="./images/sprite.svg#icon-mail_form"></use> 
           </svg>
       </div>
@@ -458,8 +458,11 @@ id="user-mails"
       </div>
 
       <div class="agree">
-<input type="checkbox">
+        <label class="agree-label">
+<input class="checkbox" type="checkbox">
+<span class="icon-checkbox"></span>
        Соглашаюсь с рассылкой и принимаю <a href=""><span class="conditions">Условия договора</span></a>
+</label>
 </div>
 
       <div class="button-centered">
