--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ id="user-mails"
   <div>
     <button data-modal-close class="button-close">
     <svg class="icon-close" width="11px" height="11px">
-      <use href="./images/sprite.svg#icon-close_form"></use>
+      <use href="./Images/sprite.svg#icon-close_form"></use>
     </svg></button>
   </div>
   <p class="left-data">Оставьте свои данные, мы вам перезвоним</p>
@@ -432,7 +432,7 @@ id="user-mails"
         <input type="text" class="form-input" name="name" id="name" placeholder=" " />
         <label for="name" class="form-label">Имя</label>
           <svg class="icon-form" width="12px" height="12px">
-            <use href="./images/sprite.svg#icon-name_form"></use> 
+            <use href="./Images/sprite.svg#icon-name_form"></use> 
           </svg>
       </div>
     
@@ -440,7 +440,7 @@ id="user-mails"
         <input type="tel" class="form-input" name="telephone" id="telephone" placeholder=" " />
         <label for="telephone" class="form-label">Телефон</label>
           <svg class="icon-form" width="13px" height="13px">
-            <use href="./images/sprite.svg#icon-phome_form"></use> 
+            <use href="./Images/sprite.svg#icon-phome_form"></use> 
           </svg>
       </div>
 
@@ -448,7 +448,7 @@ id="user-mails"
         <input type="email" class="form-input" name="mail" id="mail" placeholder=" " />
         <label for="mail" class="form-label">Почта</label>
           <svg class="icon-form" width="15px" height="12px">
-            <use href="./images/sprite.svg#icon-mail_form"></use> 
+            <use href="./Images/sprite.svg#icon-mail_form"></use> 
           </svg>
       </div>
 
