Type submit in button-subscribe

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ id="user-mails"
  placeholder="E-mail"
  autofocus/>
 
-    <button class="button-subscribe">Подписаться
+    <button type="submit" class="button-subscribe">Подписаться
       <span><svg class="icon-send" width="24px" height="24px">
           <use href="./Images/sprite.svg#icon-icon_send"></use>
         </svg>
@@ -466,7 +466,7 @@ id="user-mails"
 </div>
 
       <div class="button-centered">
-  <button class="button-sent" data-modal-close>Отправить</button>
+  <button class="button-sent">Отправить</button>
 </div>
 
   </form>
