Type submi in button-sent

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ id="user-mails"
 </div>
 
       <div class="button-centered">
-  <button class="button-sent">Отправить</button>
+  <button type="submit" class="button-sent">Отправить</button>
 </div>
 
   </form>
